--- a/index.html
+++ b/index.html
@@ -3,14 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Mod Links</title>
+    <script src="jquery.js" charset="utf-8"></script>
+    <script src="script.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="css/styles.css" charset="utf-8">
   </head>
   <body>
 
     <header>
       <h1>Mod Links</h1>
-      <input type="text" class="title" id="title-input" value="" placeholder="Title"/>
-      <input type="text" class="url" id="url-input" value="" placeholder="URL"/>
+
+      <input type="text" class="title" id="title-input" value="google" placeholder="Title"/>
+      <input type="text" class="url" id="url-input" value="google.com" placeholder="URL"/>
       <input type="button" id="submit-button" value="Submit">
+
+      <p class="title-error"> </p>
+      <p class="url-error"> </p>
     </header>
 
     <section class="link-list">
