initial functionality working.  add new article and populate with link displayed as title

--- a/index.html
+++ b/index.html
@@ -3,8 +3,6 @@
   <head>
     <meta charset="utf-8">
     <title>Mod Links</title>
-    <script src="jquery.js" charset="utf-8"></script>
-    <script src="script.js" charset="utf-8"></script>
     <link rel="stylesheet" href="css/styles.css" charset="utf-8">
   </head>
   <body>
@@ -12,8 +10,8 @@
     <header>
       <h1>Mod Links</h1>
 
-      <input type="text" class="title" id="title-input" value="google" placeholder="Title"/>
-      <input type="text" class="url" id="url-input" value="google.com" placeholder="URL"/>
+      <input type="text" class="title" id="title-input" value="" placeholder="Title"/>
+      <input type="text" class="url" id="url-input" value="" placeholder="URL"/>
       <input type="button" id="submit-button" value="Submit">
 
       <p class="title-error"> </p>
@@ -22,15 +20,17 @@
 
     <section class="link-list">
 
-      <article class="mod-link">
+      <!-- <article class="mod-link">
         <p class="title-value">Sample Title </p>
         <p class="url-value"> Sample URL </p>
         <input type="button" class="read-button" value="Read">
         <input type="button" class="remove-button" value="Remove">
-      </article>
+      </article> -->
 
     </section>
 
+    <script src="jquery.js" charset="utf-8"></script>
+    <script src="script.js" charset="utf-8"></script>
   </body>
 
 </html>
