--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
       <!-- <article class="mod-link">
         <p class="title-value">Sample Title </p>
         <p class="url-value"> Sample URL </p>
-        <input type="button" class="read-button" value="Read">
-        <input type="button" class="remove-button" value="Remove">
+        <div class="button-container">
+          <input type="button" class="read-button" value="Read">
+          <input type="button" class="remove-button" value="Remove">
+        </div>
       </article> -->
 
     </section>
