step-2 functionality complete, errors complete

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
       <p class="title-error"> </p>
       <p class="url-error"> </p>
+
+      <p class ="read-counter">   </p>
+      <p class = "total-links-counter">   </p>
     </header>
 
     <section class="link-list">
