phase 4: clear read button working

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <input type="text" class="title" id="title-input" value="" placeholder="Title"/>
       <input type="text" class="url" id="url-input" value="" placeholder="URL"/>
 
-      <input type="button" id="submit-button" value="Submit" disabled>
+      <input type="button" id="submit-button" value="Submit" disabled/>
+      <input type="button" id="clear-all-read" value="Clear Read Bookmarks" disabled/>
 
       <p class="title-error"> </p>
       <p class="url-error"> </p>
