--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Mod Links</title>
+    <link rel="stylesheet" href="css/reset.css" charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" charset="utf-8">
-  </head>
-  <body>
-
-    <header>
-      <h1>Mod Links</h1>
-
-      <input type="text" class="title" id="title-input" value="" placeholder="Title"/>
-      <input type="text" class="url" id="url-input" value="" placeholder="URL"/>
-
-      <input type="button" id="submit-button" value="Submit" disabled/>
-      <input type="button" id="clear-all-read" value="Clear Read Bookmarks" disabled/>
-
+</head>
+<header>
+  <h1>Mod Links</h1>
+  <div class="input-container-all">
+    <div class="input-container" <input type="text" class="title" id="title-input" value="" placeholder="Title" />
       <p class="title-error"> </p>
+      <input type="text" class="url" id="url-input" value="" placeholder="URL" />
       <p class="url-error"> </p>
+    </div>
+    <div class="buttons">
+      <input type="button" id="submit-button" value="Submit" disabled/>
+    </div>
+  </div>
+</header>
 
-      <p class ="read-counter">   </p>
-      <p class = "total-links-counter"> </p>
-    </header>
-
+<body>
+  <div id="counter-container">
+    <p class="read-counter"> </p>
+    <p class="total-links-counter"> </p>
+  </div>
+  <div class=link-container>
     <section class="link-list">
+      <input type="button" id="clear-all-read" value="Clear Read Bookmarks" disabled/>
     </section>
-
+  </div>
     <script src="jquery.js" charset="utf-8"></script>
     <script src="script.js" charset="utf-8"></script>
-
-  </body>
-
+</body>
 </html>
