refactor index.html

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
                   <div class="input-fields">
 
                     <input type="button" id="clear-all-read" value="Clear Read Bookmarks" disabled/>
-                    <input type="text" class="title" id="title-input" value="google" placeholder="Title" />
+                    <input type="text" class="title" id="title-input" value="" placeholder="Title" />
                     <p class="title-error"> </p>
-                    <input type="text" class="url" id="url-input" value="goole.com" placeholder="URL" />
+                    <input type="text" class="url" id="url-input" value="" placeholder="URL" />
                     <p class="url-error"> </p>
                     <input type="button" id="submit-button" value="Submit" disabled/>
 
