--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <div class="input-container-all">
 
               <div class="input-container">
-                <h1>Mod Links</h1>
 
                   <div class="input-fields">
 
+                    <h1>Mod Links</h1>
                     <input type="button" id="clear-all-read" value="Clear Read Bookmarks" disabled/>
-                    <input type="text" class="title" id="title-input" value="" placeholder="Title" />
-                    <p class="title-error"> </p>
-                    <input type="text" class="url" id="url-input" value="" placeholder="URL" />
-                    <p class="url-error"> </p>
+                    <input type="text" class="title input" id="title-input" value="" placeholder="Title" />
+                    <input type="text" class="url input" id="url-input" value="" placeholder="URL" />
                     <input type="button" id="submit-button" value="Submit" disabled/>
+                    <p class="title-error error"> </p>
+                    <p class="url-error error"> </p>
 
                 </div>
 
@@ -51,12 +51,3 @@
   </body>
 
 </html>
-
-
-<!-- <article class=\"mod-link"\>' +
-                          '<a href='+urlInput+'>' + titleInput + '</a>' +
-                          '<div class=\"button-container"\>' +
-                            '<input type=\"button"\ class=\"read-button"\ value=\"Read"\>' +
-                            '<input type=\"button"\ class=\"remove-button"\ value=\"Remove"\>' +
-                          '</div>' +
-                        '</article>'); -->
